fixed minor alignment issue

--- a/src/style/scss/components/_menu.scss
+++ b/src/style/scss/components/_menu.scss
@@ -19,7 +19,8 @@ strong {
     font-size:2em;
     position:fixed;
     top: 50px;
-    left:32.5%;
+    left:0px;
+    width:100%;
   }
 
 
