--- a/src/style/scss/pages/_home.scss
+++ b/src/style/scss/pages/_home.scss
@@ -20,8 +20,13 @@
     float:right;
   }
   input[type=text]{
-    width:72%;
+    width:70%;
     margin-left:15px;
+    @media screen and (max-width:1400px){
+      & {
+        width:50%;
+      }
+    }
   }
   input[type=text], button {
     height:100%;
